--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,12 +1,20 @@
 ﻿@page
 @model IndexModel
 @{    
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "List of demos";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Hello World from .NET 7</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-left">
+    <h1 class="display-4">Links to demos in the Sandbox</h1>
+    <body>
+        <dl>
+          <dt>Azure Machine Learning</dt>
+            <dd>Link</dd>
+          <dt>Azure Fabric</dt>
+            <dd>Link</dd>
+          <dt>Azure Cognitive Services</dt>
+            <dd>Link</dd>
+        </dl>
     <hr />
     <div>Host operating system: @Model.OSVersion</div>
 </div>
