--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -15,6 +15,7 @@
           <dt>Azure Cognitive Services</dt>
             <dd>Link</dd>
         </dl>
+    </body>
     <hr />
     <div>Host operating system: @Model.OSVersion</div>
 </div>
