--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,16 +5,29 @@
 }
 
 <div class="text-left">
-    <h1 class="display-4">Links to demos in the Sandbox</h1>
+    <h1 class="display-4">Welcome to the Dai-ichi Life Holdings Sandbox</h1>
     <body>
-        <dl>
-          <dt>Azure Machine Learning</dt>
-            <dd>Link</dd>
-          <dt>Azure Fabric</dt>
-            <dd>Link</dd>
-          <dt>Azure Cognitive Services</dt>
-            <dd>Link</dd>
-        </dl>
+        <p>Below is a list of projects and workspaces accessible in the Sandbox. Please click on a link to get started.</p>
+        <table>
+          <tr>  
+            <th>Workspace/Project Name</th>
+            <th>Description</th>
+            <th>Link</th>
+            <th>Version</th>
+          </tr>
+          <tr>
+            <td>Azure Machine Learning</td>
+            <td>Use models from the Azure Model catalogues, such as GTP4.0, or build your own data science solutions with Automated Machine Learning, Pipelines, Notebooks, Python, etc.</td>
+            <td><a href="https://ml.azure.com/?tid=81bbf2ba-43ba-4544-9962-cc82529aeb1c&wsid=/subscriptions/1441fe48-f8cb-403f-b633-6f4ae3fca077/resourcegroups/rg_ml1/providers/Microsoft.MachineLearningServices/workspaces/ml1">Link</a></td>
+            <td>1.0</td>
+           </tr>
+          <tr>
+            <td>Azure Fabric</td>
+            <td>an all-in-one analytics solution for enterprises that covers everything from data movement to data science, Real-Time Analytics, and business intelligence. It offers a comprehensive suite of services, including data lake, data engineering, and data integration, all in one place</td>
+            <td>Link</td>
+            <td>1.0</td>
+           </tr>
+        </table
     </body>
     <hr />
     <div>Host operating system: @Model.OSVersion</div>
