--- a/Pages/Shared/_Layout.cshtml.css
+++ b/Pages/Shared/_Layout.cshtml.css
@@ -46,3 +46,11 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
+
+th, td {
+  padding: 15px;
+}
+
+tr:nth-child(even) {
+  background-color: #D6EEEE;
+}
